--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title></title>
 </head>
 <body>
-	<script src="resources/lib/react/react.min.js"></script>
+	<script src="resources/lib/react/react.js"></script>
 	<script src="resources/lib/react/JSXTransformer.js"></script>
-	<script type="text/jsx" src="resources/src/components/Avatar.js"></script>
+	<script type="text/jsx" src="resources/src/components/Counter.js"></script>
 </body>
 </html>
